# Key-Kid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.sagemath  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.trae/documents/: CTF 密码学 MCP Server 规划.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SAGEMATH.md
examples/: basic_usage.py  ctf_workflow.py  performance_demo.py  sagemath_crypto.py
scripts/: benchmark.py  selftest.py
src/: server.py
src/prompts/: analyze.py
src/resources/: samples.py  wordlist.py
src/tools/: block.py  classic.py  decode.py  ecc.py  hash.py  models.py  number.py  rc4.py  rot.py  rsa.py  sagemath.py  score.py  xor.py
src/utils/: scoring.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  samples.py
tests/test_integration/: test_mcp_performance.py  test_mcp_protocol.py
tests/test_tools/: test_classic.py  test_decode.py  test_ecc.py  test_number.py  test_rot.py  test_rsa.py  test_sagemath.py  test_xor.py
tests/test_utils/: test_scoring.py
